--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 aws-config = "0.55.0"
 aws-sdk-route53 = "0.25.1"
 clap = { version = "4.2.1", default-features = false, features = ["std", "derive", "usage", "help"] }
+reqwest = "0.11.16"
 time = "0.3.20"
 tokio = { version = "1.27.0", features = ["macros"] }
