--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 aws-config = "0.55.0"
 aws-sdk-route53 = "0.25.1"
 clap = { version = "4.2.1", default-features = false, features = ["std", "derive", "usage", "help"] }
+env_logger = "0.10.0"
 openssl = { version = "0.10.50", features = ["vendored"] }
 reqwest = { version = "0.11.16", features = ["json"] }
 serde = { version = "1.0.160", features = ["derive"] }
